[package]
name = "ProtonFarming"
version = "0.1.0"
edition = "2021"

[metadata]
authors = ["Panda404NotFound"]
description = "ProtonFarming auto staking and liquidity pool staking"
repository = "https://github.com/Panda404NotFound/ProtonFarming"
tags = ["staking", "liquidity pool", "proton", "XPRnetwork", "blockchain", "farming"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
dotenv = "0.15.0"
env_logger = "0.9"
log = "0.4"

[profile.dev]
debug = true
opt-level = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false
debug-assertions = false

[profile.release.package."*"]
opt-level = 3